MQTT Perf Tests Broker Build: Use same build procedure as mqttd for edgehub container (#3374)
* use same build method as mqttd for edgehub container

--- a/mqtt/docker/linux/amd64/Dockerfile
+++ b/mqtt/docker/linux/amd64/Dockerfile
@@ -1,25 +1,6 @@
-# -*- mode: dockerfile -*-
-
-# You can override this `--build-arg BASE_IMAGE=...` to use different
-# version of Rust or OpenSSL.
-ARG BASE_IMAGE=ekidd/rust-musl-builder:stable
-
-# Our first FROM statement declares the build environment.
-FROM ${BASE_IMAGE} AS builder
-
-# Add our source code.
-ADD . ./
-
-# Force add tartget platform in case 
-# rust-toolchain file contains version other than 'stable'.
-# Otherwise it's noop.
-RUN rustup target add x86_64-unknown-linux-musl
-
-# Build our application.
-RUN cargo build --release --manifest-path mqttd/Cargo.toml --no-default-features --features "generic" \
-    && strip /home/rust/src/target/x86_64-unknown-linux-musl/release/mqttd
-
 FROM busybox
+
+ADD ./x86_64-unknown-linux-musl/release/mqttd /usr/local/bin/mqttd
 
 # Add an unprivileged user account for running mqttd	
 ARG MQTTDUSER_ID=1000
@@ -28,10 +9,6 @@ RUN adduser -Du ${MQTTDUSER_ID} mqttduser
 
 EXPOSE 1883/tcp
 EXPOSE 8883/tcp
-
-COPY --from=builder \
-    /home/rust/src/target/x86_64-unknown-linux-musl/release/mqttd \
-    /usr/local/bin/
 
 USER mqttduser
 
