--- a/.github/workflows/issue-labeler.yml
+++ b/.github/workflows/issue-labeler.yml
@@ -1,3 +1,4 @@
+# Please refer to the issue-labeler documentation here: https://github.com/github/issue-labeler
 name: Label all github issues
 on:
   issues:
