make the broker build with generic features

--- a/builds/misc/images-mqtt.yaml
+++ b/builds/misc/images-mqtt.yaml
@@ -30,7 +30,7 @@ jobs:
         displayName: Build MQTT Broker - amd64
         inputs:
           filePath: scripts/linux/cross-platform-rust-build.sh
-          arguments: --os ubuntu18.04 --arch amd64 --build-path mqtt/mqttd
+          arguments: --os ubuntu18.04 --arch amd64 --build-path mqtt/mqttd --cargo-flags '--no-default-features --features="generic"'
 
       - template: templates/move-rust-artifacts.yaml
         parameters:
@@ -79,7 +79,7 @@ jobs:
         displayName: Build MQTT Broker - arm32
         inputs:
           filePath: scripts/linux/cross-platform-rust-build.sh
-          arguments: --os ubuntu18.04 --arch arm32v7 --build-path mqtt/mqttd
+          arguments: --os ubuntu18.04 --arch arm32v7 --build-path mqtt/mqttd --cargo-flags '--no-default-features --features="generic"'
 
       - template: templates/move-rust-artifacts.yaml
         parameters:
